stderr
Printer.java:10: error: ';' expected
        this.function = function
                                ^
1 error
